Fixing overflow on x for mobile

--- a/styles.css
+++ b/styles.css
@@ -377,8 +377,9 @@ main {
   flex-direction: column;
   justify-content: center;
   transition: transform 0.5s ease-in;
+
   opacity: 0;
-  transform: translateX(80px);
+  transform: translateY(20px);
 }
 .feature-card:nth-child(2) {
   transition-delay: 0.1s;
@@ -389,7 +390,7 @@ main {
 
 .feature-card.animate-in {
   opacity: 1;
-  transform: translateX(0);
+  transform: translateY(0);
 }
 
 .feature-card:hover {
@@ -652,6 +653,13 @@ main {
   .site-footer .container {
     flex-direction: row;
     justify-content: space-between;
+  }
+  .feature-card {
+    transform: translateX(-80px);
+  }
+  .feature-card.animate-in {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
 
